<resources>
    <string name="app_name">FitTracker</string>
    <string name="title_pass">Password</string>
    <string name="title_email">E-mail</string>
    <string name="example_mail_hint">ejemplo@mail.com</string>
    <string name="btn_login">Log In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="error_loginerror">Wrong Log In information</string>
    <string name="msg_on_signup_pressed">Sign up pressed</string>
    <string name="msg_on_valid_login">Correct Log In information</string>
    <string name="title_pass_rep">Repeat Password</string>
    <string name="title_name">Name</string>
    <string name="title_surname">Surname</string>
    <string name="btn_cancel">Cancel</string>
    <string name="error_passwordrep_badmatch">Passwords do not match</string>
    <string name="error_emailformat">The email must have a valid format</string>
    <string name="error_user_already_exists">That user is already registered</string>
    <string name="error_signup_missing_field">All fields must be filled</string>
    <string name="msg_on_valid_signup">Succesful user registration</string>
    <string name="btn_apply_changes">Apply</string>
    <string name="error_usersettings_dberror">An error occurred while retrieving user information</string>
    <string name="msg_on_changes_applied">Changes applied successfully</string>
    <string name="btn_logout">Log Out</string>
    <string name="btn_email_information">Mail your user information</string>
    <string name="error_send_mail">An error occured while trying to send the mail</string>
    <string name="error_fetching_api_data">An error occured while contacting the server</string>
    <string name="humidity_tag">Humidity:</string>
    <string name="pressure_tag">Pressure:</string>
    <string name="error_fetching_image">An error occured while fetching the image</string>
    <string name="btn_change_avatar">Change Avatar</string>
    <string name="steps">steps</string>
    <string name="kilometers">km</string>
    <string name="calories">cals</string>
    <string name="btn_reset_steps">Reset Steps</string>
    <string name="msg_on_steps_reset">The steps has been reseted</string>
</resources>
